Fix: env codegpt url

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,7 @@
 # Mistral AI
 MISTRAL_MODEL="ministral-8b-2410"
-MISTRAL_API_KEY="xtyTZappMpsEpojjM1yhFsJrIngxW9gx"
+MISTRAL_API_KEY=""
 
 # CODEGPT
-CODEGPT_API_KEY="sk-86cefaae-f0fe-4634-b5ec-4c905a170ecb"
+CODEGPT_API_KEY=""
+CODEGPT_API_URL="https://api.codegpt.co/api/v1/"
