Ignorar archivos sensibles y agregar cambios iniciales

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,7 +1,6 @@
-# Mistral AI
-MISTRAL_MODEL="ministral-8b-2410"
-MISTRAL_API_KEY=""
+CODEGPT_API_KEY = "sk-1602f139-054e-469a-a56a-70a7fd2080fd"
+CODEGPT_AGENT_ID = "4752b985-8222-44af-9690-f938e976760b"
+CODEGPT_API_URL = "https://api.codegpt.co/api/v1/"
 
-# CODEGPT
-CODEGPT_API_KEY=""
-CODEGPT_API_URL="https://api.codegpt.co/api/v1/"
+MISTRAL_API_KEY = "xNXPRhGcsxCbyx212CYXLD8nAU5cej82"
+MISTRAL_MODEL = "ministral-3b-2410"
